<resources>
    <string name="app_name">SozLook</string>
    <!-- Splash -->
    <string name="network_error_title">İnternet bağlantısı bulunamadı</string>
    <string name="network_error_main">Uygulama ilk açılışta giriş yapmak için internet bağlantısına ihtiyaç duyar, lütfen internet
        bağlantınızı kontrol edin.
    </string>
    <string name="network_dialog_wifi_button">WIFI ayarlarını aç</string>
    <string name="network_dialog_mobile_data_button">Mobil veri ayarlarını aç</string>
    <!-- Test -->
    <string name="answer_button">Cevapla</string>
    <string name="next_button">Bu kelimeyi biliyorum, sonraki kelimeye geç</string>
    <string name="answer_edit_text">cevap</string>
    <string name="quiz_wrong_answer_title">Cevap Yanlış</string>
    <string name="quiz_answer">Doğrusu:</string>
    <string name="quiz_answer_word">Kelime</string>
    <string name="quiz_answer_meaning">Anlam</string>
    <string name="quiz_answer_example">Ornek Cumle</string>
    <string name="next_word_button">Sonraki kelime</string>
    <string name="quiz_finish_button">Bitir</string>
    <string name="quiz_word_point_status_text">/10</string>
    <!-- Profil -->
    <string name="profile_username">Kullanici Adi</string>
    <string name="profile_total_word">TOPLAM KELİME</string>
    <string name="profile_learned_words_count">ÖĞRENİLEN KELİME</string>
    <string name="profile_learned_words_button_txt">Öğrenilen Kelimeler</string>
    <string name="profile_settings_button_txt">Ayarlar</string>
    <string name="profile_learned_words_button">Öğrenilen Kelimeler</string>
    <string name="info_number_txt">adet</string>
    <!-- Ayarlar -->
    <string name="ayarlar_yeni_kullanici_adi">Yeni Kullanıcı Adı</string>
    <string name="ayarlar_mevcut_sifre">Mevcut Şifre</string>
    <string name="ayarlar_yeni_sifre">Yeni Şifre</string>
    <string name="ayarlar_yeni_sifre_hint">Yeni Şifre</string>
    <string name="ayarlar_mevcut_sifre_hint">Mevcut Şifre</string>
    <string name="ayarlar_kullanici_adi_hint">kullanıcı adı</string>
    <!-- Sifre Sıfırla-->
    <string name="email_baslik">Email:</string>
    <string name="email_hint">Sisteme kayıtlı email adresinizi girin</string>

    <!-- Kayit Ol -->
    <string name="kayit_ol_kullanici_adi_hint">Kullanıcı Adın</string>
    <string name="kayit_ol_email_hint">Mail</string>
    <string name="kayit_ol_sifre_hint">Parola</string>
    <string name="kayit_ol_sifre_tekrar_hint">Parola Tekrar</string>
    <string name="email_verify_button_Txt">Doğrulama bağlantısı gönder</string>
    <string name="kayit_ol_verify_dialog_positive">Doğruladım, devam et</string>
    <string name="kayit_ol_verify_dialog_msg">Mail adresinizi doğrulayın"</string>
    <string name="kayit_ol_verify_dialog_send_link_button">Doğrulama bağlantısı gönder</string>
    <string name="kayit_ol_verify_fragment_main">Mail adresinizi doğrulamanız için belirtmiş olduğunuz mail adresine
        doğrulama bağlantısı gönderilmiştir. Linke tıklayıp geri dönün. (Spam klasörünü kontrol etmeyi unutmayın)
    </string>


    <!-- Kelime Ekle -->
    <string name="kelime_ekle_baslik">Kelime Ekle</string>
    <string name="kelime_ekle_kelime_baslik">Kelime</string>
    <string name="kelime_ekle_anlam_baslik">Kelime Anlamı:</string>
    <string name="kelime_ekle_ornek_baslik">Örnek Cümle:</string>
    <string name="kelime_ekle_kelime_hint">Kelime (zorunlu)</string>
    <string name="kelime_ekle_anlam_hint">Anlam (isteğe bağlı)</string>
    <string name="kelime_ekle_ornek_hint">Örnek (isteğe bağlı)</string>

    <!-- Kelime Ara -->
    <string name="kelime_ara_baslik">Kelime Ara</string>
    <string name="kelime_ara_kelime_baslik">Kelime:</string>
    <string name="kelime_ara_kelime_hint">Aranacak kelimeyi girin</string>
    <!-- Kelime Sil -->
    <string name="kelime_sil_baslik">Kelime Sil</string>
    <string name="kelime_sil_kelime_baslik">Kelime:</string>
    <string name="kelime_sil_kelime_hint">kelimeyi girin</string>

    <string name="name">Name</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- KelimeListe -->
    <string name="checkbox_ornek">Örnek Cümle</string>
    <string name="checkbox_anlam">Anlam</string>
    <string name="checkbox_kelime">Kelime</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mail_verify_warning_string">Mail adresiniz doğrulanmamış gözüküyor. Mail adresinize gönderilen
        bağlantıya tıkladığınızdan emin olup eğer tıkladıysanız biraz daha bekleyip tekrar denemenizi rica ederim
    </string>
    <string name="quiz_title">Sorular için kelime kaynağını seçin</string>

    <string name="word_not_found_err">Kelime Bulunamadı</string>
    <!-- Warnings -->
    <string name="default_network_exception_msg">Bir sorun oluştu, internet bağlantınızı kontrol edin</string>
    <string name="learnedWordStatusText">Öğrenilmiş</string>
    <string name="unLearnedWordStatusText">Öğreniliyor</string>
    <string name="of10">/10</string>
    <string name="no_word_found_message">Hiç kelimeniz yok</string>
    <string name="no_word_quiz_msg">Görünüşe göre test olacak bir kelimeniz bulunmuyor.</string>

</resources>