<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".activity.quiz.FragmentQuizWrongAnswer"
android:background="@color/theme_primary_color">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
    >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/quizResultBackButton"
            android:layout_width="@dimen/back_button_height_and_width"
            android:layout_height="@dimen/back_button_height_and_width"
            android:layout_marginStart="@dimen/back_button_frame_margin_top_and_start"
            android:layout_marginTop="@dimen/back_button_frame_margin_top_and_start"
            android:background="@drawable/ic_button_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ibm_plex_mono"
            android:layout_marginTop="12dp"
            android:text="@string/quiz_wrong_answer_title"
            android:textAppearance="@style/main_high_title"
            app:layout_constraintBottom_toTopOf="@+id/titleAnswerTxt" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quizResultBackButton"/>


        <TextView
            android:id="@+id/titleAnswerTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/ibm_plex_mono"
            android:text="@string/quiz_answer"
            android:textAppearance="@style/under_text"
            app:layout_constraintBottom_toTopOf="@+id/titleMeaningTxt"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"/>

        <TextView
            android:id="@+id/titleWordTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_box_title_margin_bottom"
            android:fontFamily="@font/ibm_plex_mono"
            android:text="@string/quiz_answer_word"
            android:textAppearance="@style/textbox_title"
            app:layout_constraintBottom_toTopOf="@+id/wordTextView"
            app:layout_constraintStart_toStartOf="@+id/wordTextView"/>

        <TextView
            android:id="@+id/titleMeaningTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_box_title_margin_bottom"
            android:fontFamily="@font/ibm_plex_mono"
            android:text="@string/quiz_answer_meaning"
            android:textAppearance="@style/textbox_title"
            app:layout_constraintBottom_toTopOf="@+id/wordMeaningTextView"
            app:layout_constraintStart_toStartOf="@+id/wordMeaningTextView"/>

        <TextView
            android:id="@+id/titleExampleTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_box_title_margin_bottom"
            android:fontFamily="@font/ibm_plex_mono"
            tools:visibility="visible"
            android:visibility="gone"
            android:text="@string/quiz_answer_example"
            android:textAppearance="@style/textbox_title"
            app:layout_constraintBottom_toTopOf="@+id/wordExampleTextView"
            app:layout_constraintHorizontal_bias="0.464"
            app:layout_constraintStart_toStartOf="@+id/wordExampleTextView"/>

        <com.erdince.yabancidilkelimehaznesi6.util.GeneralBasicButton
            android:id="@+id/nextWordButton"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@drawable/roundedcorner"
            android:elevation="3dp"
            android:padding="@dimen/button_text_padding"
            android:text="@string/next_word_button"
            android:textAppearance="@style/button_text"
            android:layout_marginTop="120dp"
            app:layout_constraintEnd_toEndOf="@+id/addToMyCustomWords"
            app:layout_constraintStart_toStartOf="@+id/addToMyCustomWords"
            app:layout_constraintTop_toBottomOf="@+id/view"/>

        <com.erdince.yabancidilkelimehaznesi6.util.GeneralBasicButton
            android:id="@+id/addToMyCustomWords"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@drawable/roundedcorner"
            android:elevation="3dp"
            android:layout_marginTop="8dp"
            android:padding="@dimen/button_text_padding"
            android:text="Kelimelerime ekle"
            android:textAppearance="@style/button_text"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nextWordButton"/>

        <TextView
            android:id="@+id/wordExampleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_box_margin_start_and_end"
            android:layout_marginEnd="@dimen/text_box_margin_start_and_end"
            android:layout_marginTop="24dp"
            android:background="@drawable/roundedcorner_textbox"
            android:fontFamily="@font/ibm_plex_mono"
            android:gravity="center"
            android:padding="10dp"
            android:text="ornekCumle"
            android:textAlignment="center"
            android:textAppearance="@style/textbox_text_style_high"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/wordMeaningTextView" tools:visibility="visible"/>

        <TextView
            android:id="@+id/wordTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/text_box_margin_start_and_end"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="44dp"
            android:background="@drawable/roundedcorner_textbox"
            android:fontFamily="@font/ibm_plex_mono"
            android:gravity="center"
            android:minHeight="70dp"
            android:padding="10dp"
            android:text="ornekKelime"
            android:textAlignment="center"
            android:textAppearance="@style/textbox_text_style_high"
            app:layout_constraintEnd_toStartOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@+id/wordMeaningTextView"/>

        <TextView
            android:id="@+id/wordMeaningTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:padding="10dp"
            android:layout_marginEnd="@dimen/text_box_margin_start_and_end"
            android:gravity="center"
            android:minHeight="70dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/roundedcorner_textbox"
            android:fontFamily="@font/ibm_plex_mono"
            android:text="ornekAnlamaaaaaaaaaaaaaaa"
            android:textAlignment="center"
            android:textAppearance="@style/textbox_text_style_high"
            app:layout_constraintTop_toBottomOf="@id/titleAnswerTxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/view"/>

        <View
            android:id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></View>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>