<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/theme_primary_color"
             tools:context=".activity.FragmentWordList">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="10dp"
        android:orientation="vertical">
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@null"
            android:src="@drawable/ic_button_back"
            android:layout_marginTop="@dimen/back_button_frame_margin_top_and_start"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck"
        />
        <LinearLayout
            android:id="@+id/checkboxFilterLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
        android:orientation="horizontal">


            <CheckBox
                android:id="@+id/wordItCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="@font/sarala_bold"
                android:text="@string/checkbox_kelime"
                android:textColor="@color/white"
                android:buttonTint="@color/theme_orange_color"
            />
            <View android:layout_width="0dp" android:layout_height="1dp"
                  android:layout_weight="1"/>
            <CheckBox
                android:id="@+id/wordMeaningCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="@font/sarala_bold"
                android:text="@string/checkbox_anlam"
                android:textColor="@color/white"
                android:buttonTint="@color/theme_orange_color"
            />
            <View android:layout_width="0dp" android:layout_height="1dp"
                  android:layout_weight="1"/>

            <CheckBox
                android:id="@+id/wordExampleCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/theme_orange_color"
                android:checked="true"
                android:fontFamily="@font/sarala_bold"
                android:text="@string/checkbox_ornek"
                android:textColor="@color/white"
            />

        </LinearLayout>








            <androidx.appcompat.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@drawable/roundedcorner"
                app:queryBackground="@null"
                android:iconifiedByDefault="false">

            </androidx.appcompat.widget.SearchView>

        <include
            android:id="@+id/noWordLayout"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="100dp"
            layout="@layout/no_word_layout"/>
        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/wordListRcv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>



</FrameLayout>